fixed spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,6 +56,10 @@ body {
     color: $textcolor;
     letter-spacing: 1px;
     line-height: 160%;
+
+    li {
+      margin-top: 10px;
+    }
   }
 
   .posthead {
